test/files/neg/t563.check
t563.scala:6: error: missing parameter type
            map(n,ptr => Option(ptr.get));
                  ^
1 error
